Updated Article One to add content

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>
+		Article 1 | Learning Web-apps
+	</title>
+</head>
+<body>
+	<div>
+		<a href="/">Home</a> 
+	</div>
+	<hr/>
+	<h3>
+		Article One is here!
+	</h3>
+</body>
+</html>
