--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,12 +6,18 @@
 	</title>
 </head>
 <body>
-	<div>
+	<div class="container">
 		<a href="/">Home</a> 
-	</div>
 	<hr/>
 	<h3>
 		Article One is here!
 	</h3>
+</div>
+<style>
+	.container{
+	color: #38d2d2;
+    padding-top: 50px;
+	}
+</style>
 </body>
 </html>
