--- a/ui/index.html
+++ b/ui/index.html
@@ -13,5 +13,10 @@
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        <div>
+        <a href="/article-one">Article 1</a>
+        <a href="/article-two">Article 2</a> 
+    </div>
+    <hr/>
     </body>
 </html>
