Adding client side main.js

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,10 +5,10 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img id= 'madi' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id = 'main content' class="center text-big bold">
             Hi! I am your webapp. Yours truly - SA!
         </div>
         <script type="text/javascript" src="/ui/main.js">
@@ -18,5 +18,8 @@
         <a href="/article-two">Article 2</a> 
     </div>
     <hr/>
+    <script>
+        alert('Hi. I \'m Javascript');
+    </script>
     </body>
 </html>
