--- a/ui/index.html
+++ b/ui/index.html
@@ -21,5 +21,14 @@
     <script>
         alert('Hi. I \'m Javascript');
     </script>
+    <div class="footer">
+        This button <button id="clicker">Click Me </button>has been clicked <span id="count">0</span> times
+    </div>
+        <input type="text" id="name" placeholder="Name"></input>
+        <input type="submit" id="submit_button" value="Submit"></input>
+        <ul id="name_list">
+        </ul>
+    <script type="text/javascript" src="/ui/main.js">
+        </script>
     </body>
 </html>
